--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,42 +1,61 @@
 .jumbotron {
-    background: #fff;
-    padding-bottom: 1em;
+  background: #fff;
+  padding-bottom: 1em;
 }
+
 .jumbotron .btn {
-    border: 0;
-    padding: 1em 2em;
+  border: 0;
+  padding: 1em 2em;
 }
+
 .jumbotron .btn-primary {
-    background: #2683ff;
+  background: #2683ff;
 }
+
 .jumbotron .btn-primary:hover {
-    background: #173AE8;
+  background: #173AE8;
 }
+
 .jumbotron h1 {
-    font-size: 42px;
-    font-weight: bold;
+  font-size: 42px;
+  font-weight: bold;
 }
+
 .jumbotron p {
-    max-width: 65%;
-    font-size: 18px;
-    margin: 1em auto 2em;
+  max-width: 65%;
+  font-size: 18px;
+  margin: 1em auto 2em;
 }
-.navbar + .jumbotron {
-    margin-top: -20px;
+
+.navbar+.jumbotron {
+  margin-top: -20px;
 }
+
 .jumbotron .lang-logo {
-    display: block;
-    overflow: hidden;
-    width: 100px;
-    height: 100px;
-    margin: auto;
+  display: block;
+  overflow: hidden;
+  width: auto;
+  height: 100px;
+  margin: auto;
+  text-decoration: none!important;
+  color: #473198;
 }
+
+span.brand {
+  font-size: 4em;
+  font-weight: 900;
+  font-style: italic;
+  margin-bottom: 20px;
+}
+
 .jumbotron .lang-logo img {
-    max-width: 100%;
+  max-width: 100%;
 }
+
 .jumbotron .alert {
-    margin: 0 auto 3em;
+  margin: 0 auto 3em;
 }
+
 @media (max-width: 767px) {
   .jumbotron p {
     max-width: 80%;
@@ -47,7 +66,9 @@
   margin-top: 20px;
 }
 
+
 /* Make all buttons 200px */
+
 .storj-methods button {
   width: 250px;
 }
