--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,122 +1,93 @@
-.jumbotron {
-  background: #fff;
-  padding-bottom: 1em;
+/* ---- reset ---- */
+
+body {
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
-.jumbotron .btn {
-  border: 0;
-  padding: 1em 2em;
+.hero h1 {
+  font-size: 40px;
+  color: white;
+  left: 50%;
+  margin-bottom: 60px;
 }
 
-.jumbotron .btn-primary {
-  background: #2683ff;
+.hero p {
+  font-size: 25px;
+  color: white;
 }
 
-.jumbotron .btn-primary:hover {
-  background: #173AE8;
+canvas {
+  display: block;
+  vertical-align: bottom;
 }
 
-.jumbotron h1 {
-  font-size: 42px;
+
+/* ---- particles.js container ---- */
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #003648;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+
+/* ---- stats.js ---- */
+
+.count-particles {
+  background: #000022;
+  position: absolute;
+  top: 48px;
+  left: 0;
+  width: 80px;
+  color: #13E8E9;
+  font-size: .8em;
+  text-align: left;
+  text-indent: 4px;
+  line-height: 14px;
+  padding-bottom: 2px;
+  font-family: Helvetica, Arial, sans-serif;
   font-weight: bold;
 }
 
-.jumbotron p {
-  max-width: 65%;
-  font-size: 18px;
-  margin: 1em auto 2em;
+.js-count-particles {
+  font-size: 1.1em;
 }
 
-.navbar+.jumbotron {
-  margin-top: -20px;
-}
-.btn-primary {
-  background-color: #473198!important;
-  border-color: #2f2065!important;
-}
-.jumbotron .lang-logo {
+.hero {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
   display: block;
-  overflow: hidden;
-  width: auto;
-  height: 100px;
-  margin: auto;
-  text-decoration: none!important;
-  color: #473198;
 }
 
-span.brand {
-  font-size: 4em;
+.hero h1 {
+  color: white;
+  font-size: 100px;
   font-weight: 900;
   font-style: italic;
-  margin-bottom: 20px;
+}
+#soon {
+  font-size: 50px;
+  margin-top: 30px;
 }
 
-.jumbotron .lang-logo img {
-  max-width: 100%;
+#stats, .count-particles {
+  -webkit-user-select: none;
 }
 
-.jumbotron .alert {
-  margin: 0 auto 3em;
+#stats {
+  border-radius: 3px 3px 0 0;
+  overflow: hidden;
 }
 
-@media (max-width: 767px) {
-  .jumbotron p {
-    max-width: 80%;
-  }
-}
-
-.spacer {
-  margin-top: 20px;
-}
-
-
-/* Make all buttons 200px */
-
-.storj-methods button {
-  width: 250px;
-}
-
-.btn-lg {
-  margin: 10px 0;
-}
-
-.sub-list {
-  margin-right: 10px;
-}
-
-.grumpy-holder {
-  text-align: center;
-}
-
-.grumpy-pic {
-  height: 400px;
-  width: 700px;
-  border: 2px solid #473198;
-}
-
-.keypair {
-  margin-top: 20px;
-}
-
-.credentials--username, .credentials--password {
-  padding: 0 15px;
-  margin-top: 10px;
-}
-
-.bucket-create {
-  padding: 10px 0;
-}
-
-.bucket-btn--create {
-  margin-left: 25px;
-}
-
-.bucket-created {
-  margin-top: 10px;
-}
-
-.new-bucket-name {
-  width: 250px;
-  padding: 5px 10px;
-  margin-bottom: 10px;
+.count-particles {
+  border-radius: 0 0 3px 3px;
 }
