--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -11,6 +11,8 @@ body {
   left: 50%;
   margin-bottom: 60px;
   font-family: 'Montserrat', sans-serif!important;
+  font-weight: 700;
+  font-style: italic;
 }
 
 .hero p {
